// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepsScreen arrow functions should render item correctly 1`] = `
<Connect(withI18nextTranslation(StepItem))
  hideAction={true}
  onAction={[Function]}
  onSelect={[Function]}
  step={
    Object {
      "id": 0,
      "organization": Object {
        "id": "000",
      },
      "receiver": Object {
        "id": "00",
      },
    }
  }
  type="swipeable"
/>
`;

exports[`StepsScreen mapStateToProps should provide the necessary props 1`] = `
Object {
  "hasMoreSteps": true,
  "pushtoken": "",
  "reminders": Array [
    Object {
      "id": 1,
      "reminder": true,
    },
  ],
  "steps": Array [
    Object {
      "id": 2,
    },
    Object {
      "id": 3,
    },
  ],
}
`;

exports[`StepsScreen renders empty screen with one reminder correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ScrollViewMock
      contentContainerStyle={
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
          },
        ]
      }
      onScroll={[Function]}
      refreshControl={
        <MyRefreshControl
          colors={
            Array [
              "#ffffff",
              "#52C5DC",
            ]
          }
          onRefresh={[Function]}
          progressBackgroundColor="#007398"
          refreshing={false}
          tintColor="#007398"
        />
      }
      scrollEventThrottle={16}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <Flex
        align="center"
        style={
          Array [
            Object {
              "backgroundColor": "#66D9F0",
              "width": 750,
            },
          ]
        }
      />
      <Flex
        align="center"
        justify="center"
        value={1}
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/footprints.png",
            }
          }
        />
        <MyText
          header={true}
          style={
            Object {
              "color": "#007398",
              "fontSize": 42,
              "paddingTop": 10,
            }
          }
        >
          STEPS OF FAITH
        </MyText>
        <MyText
          style={
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 70,
              "paddingVertical": 10,
              "textAlign": "center",
            }
          }
        >
          Choose a person in People view and add some new steps.
        </MyText>
      </Flex>
    </ScrollViewMock>
  </View>
</View>
`;

exports[`StepsScreen renders loading screen correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <LoadingGuy />
</View>
`;

exports[`StepsScreen renders screen with some focused and unfocused steps correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ScrollViewMock
      contentContainerStyle={
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
          },
        ]
      }
      onScroll={[Function]}
      refreshControl={
        <MyRefreshControl
          colors={
            Array [
              "#ffffff",
              "#52C5DC",
            ]
          }
          onRefresh={[Function]}
          progressBackgroundColor="#007398"
          refreshing={false}
          tintColor="#007398"
        />
      }
      scrollEventThrottle={16}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <Flex
        align="center"
        style={
          Array [
            Object {
              "backgroundColor": "#66D9F0",
              "width": 750,
            },
          ]
        }
      />
      <FlatList
        ListFooterComponent={null}
        bounces={false}
        data={
          Array [
            Object {
              "id": 0,
              "organization": Object {
                "id": "000",
              },
              "receiver": Object {
                "id": "00",
              },
            },
            Object {
              "id": 1,
              "organization": Object {
                "id": "111",
              },
              "receiver": Object {
                "id": "11",
              },
            },
            Object {
              "id": 2,
              "organization": Object {
                "id": "222",
              },
              "receiver": Object {
                "id": "22",
              },
            },
            Object {
              "id": 3,
              "organization": Object {
                "id": "333",
              },
              "receiver": Object {
                "id": "33",
              },
            },
          ]
        }
        disableVirtualization={false}
        extraData={
          Object {
            "hideStars": false,
          }
        }
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showsVerticalScrollIndicator={false}
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "overflow": "scroll",
              "paddingBottom": undefined,
            },
            Object {
              "paddingBottom": 40,
            },
          ]
        }
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </ScrollViewMock>
  </View>
</View>
`;

exports[`StepsScreen renders with max reminders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ScrollViewMock
      contentContainerStyle={
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
          },
        ]
      }
      onScroll={[Function]}
      refreshControl={
        <MyRefreshControl
          colors={
            Array [
              "#ffffff",
              "#52C5DC",
            ]
          }
          onRefresh={[Function]}
          progressBackgroundColor="#007398"
          refreshing={false}
          tintColor="#007398"
        />
      }
      scrollEventThrottle={16}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <Flex
        align="center"
        style={
          Array [
            Object {
              "backgroundColor": "#66D9F0",
              "width": 750,
            },
          ]
        }
      >
        <Connect(withI18nextTranslation(StepItem))
          key="1"
          onAction={[Function]}
          onSelect={[Function]}
          step={
            Object {
              "id": 1,
              "reminder": true,
            }
          }
          type="reminder"
        />
        <Connect(withI18nextTranslation(StepItem))
          key="2"
          onAction={[Function]}
          onSelect={[Function]}
          step={
            Object {
              "id": 2,
              "reminder": true,
            }
          }
          type="reminder"
        />
      </Flex>
      <FlatList
        ListFooterComponent={null}
        bounces={false}
        data={
          Array [
            Object {
              "id": 0,
              "organization": Object {
                "id": "000",
              },
              "receiver": Object {
                "id": "00",
              },
            },
            Object {
              "id": 1,
              "organization": Object {
                "id": "111",
              },
              "receiver": Object {
                "id": "11",
              },
            },
            Object {
              "id": 2,
              "organization": Object {
                "id": "222",
              },
              "receiver": Object {
                "id": "22",
              },
            },
            Object {
              "id": 3,
              "organization": Object {
                "id": "333",
              },
              "receiver": Object {
                "id": "33",
              },
            },
          ]
        }
        disableVirtualization={false}
        extraData={
          Object {
            "hideStars": true,
          }
        }
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showsVerticalScrollIndicator={false}
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "overflow": "scroll",
              "paddingBottom": undefined,
            },
            Object {
              "paddingBottom": 40,
            },
          ]
        }
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </ScrollViewMock>
  </View>
</View>
`;

exports[`StepsScreen renders with no focused steps and less than 4 unfocused steps correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ScrollViewMock
      contentContainerStyle={
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
          },
        ]
      }
      onScroll={[Function]}
      refreshControl={
        <MyRefreshControl
          colors={
            Array [
              "#ffffff",
              "#52C5DC",
            ]
          }
          onRefresh={[Function]}
          progressBackgroundColor="#007398"
          refreshing={false}
          tintColor="#007398"
        />
      }
      scrollEventThrottle={16}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <FlatList
        ListFooterComponent={null}
        bounces={false}
        data={
          Array [
            Object {
              "id": 0,
              "organization": Object {
                "id": "000",
              },
              "receiver": Object {
                "id": "00",
              },
            },
            Object {
              "id": 1,
              "organization": Object {
                "id": "111",
              },
              "receiver": Object {
                "id": "11",
              },
            },
            Object {
              "id": 2,
              "organization": Object {
                "id": "222",
              },
              "receiver": Object {
                "id": "22",
              },
            },
          ]
        }
        disableVirtualization={false}
        extraData={
          Object {
            "hideStars": true,
          }
        }
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showsVerticalScrollIndicator={false}
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "overflow": "scroll",
              "paddingBottom": undefined,
            },
            Object {
              "paddingBottom": 40,
            },
          ]
        }
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </ScrollViewMock>
  </View>
</View>
`;

exports[`StepsScreen renders with no focused steps correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Flex
      align="center"
      justify="center"
      style={
        Array [
          Object {
            "backgroundColor": "#66D9F0",
            "width": 750,
          },
          Object {
            "paddingHorizontal": 27,
            "paddingVertical": 32,
          },
        ]
      }
    >
      <Icon
        name="starGroupIcon"
        size={45}
        type="MissionHub"
      />
      <MyText
        header={true}
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 36,
            "textAlign": "center",
          }
        }
      >
        FOCUS YOUR WEEK
      </MyText>
      <MyText
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Star up to three steps and get weekly handcrafted reminders.
      </MyText>
    </Flex>
    <ScrollViewMock
      contentContainerStyle={
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
          },
        ]
      }
      onScroll={[Function]}
      refreshControl={
        <MyRefreshControl
          colors={
            Array [
              "#ffffff",
              "#52C5DC",
            ]
          }
          onRefresh={[Function]}
          progressBackgroundColor="#007398"
          refreshing={false}
          tintColor="#007398"
        />
      }
      scrollEventThrottle={16}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <FlatList
        ListFooterComponent={null}
        bounces={false}
        data={
          Array [
            Object {
              "id": 0,
              "organization": Object {
                "id": "000",
              },
              "receiver": Object {
                "id": "00",
              },
            },
            Object {
              "id": 1,
              "organization": Object {
                "id": "111",
              },
              "receiver": Object {
                "id": "11",
              },
            },
            Object {
              "id": 2,
              "organization": Object {
                "id": "222",
              },
              "receiver": Object {
                "id": "22",
              },
            },
            Object {
              "id": 3,
              "organization": Object {
                "id": "333",
              },
              "receiver": Object {
                "id": "33",
              },
            },
          ]
        }
        disableVirtualization={false}
        extraData={
          Object {
            "hideStars": false,
          }
        }
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showsVerticalScrollIndicator={false}
        style={
          Array [
            Object {
              "backgroundColor": "#ffffff",
              "overflow": "scroll",
              "paddingBottom": undefined,
            },
            Object {
              "paddingBottom": 40,
            },
          ]
        }
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </ScrollViewMock>
  </View>
</View>
`;

exports[`StepsScreen renders with no steps (focused or unfocused) correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component
    screen="StepsTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ScrollViewMock
      contentContainerStyle={
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "flex": 1,
          },
        ]
      }
      onScroll={[Function]}
      refreshControl={
        <MyRefreshControl
          colors={
            Array [
              "#ffffff",
              "#52C5DC",
            ]
          }
          onRefresh={[Function]}
          progressBackgroundColor="#007398"
          refreshing={false}
          tintColor="#007398"
        />
      }
      scrollEventThrottle={16}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <Flex
        align="center"
        justify="center"
        value={1}
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/footprints.png",
            }
          }
        />
        <MyText
          header={true}
          style={
            Object {
              "color": "#007398",
              "fontSize": 42,
              "paddingTop": 10,
            }
          }
        >
          STEPS OF FAITH
        </MyText>
        <MyText
          style={
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 70,
              "paddingVertical": 10,
              "textAlign": "center",
            }
          }
        >
          You don't have any Steps of Faith.
Choose a person to view and add some new steps.
        </MyText>
      </Flex>
    </ScrollViewMock>
    <Connect(withI18nextTranslation(TakeAStepWithSomeoneButton)) />
  </View>
</View>
`;
